[gd_scene load_steps=6 format=3 uid="uid://c0fplakpsgukb"]

[ext_resource type="Theme" uid="uid://ddcd5ya6n0b7e" path="res://ui_res/MenusFontRes.tres" id="1_vousd"]
[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="2_djtp5"]
[ext_resource type="Texture2D" uid="uid://cxpv78oa5yknj" path="res://ui_res/Background.png" id="2_ee0pf"]
[ext_resource type="PackedScene" uid="uid://dqotlulrnmshu" path="res://scenes/UI/TempMessageMenu.tscn" id="4_8eq45"]
[ext_resource type="PackedScene" uid="uid://ce2bh8w4oq1no" path="res://scenes/UI/SettingsMenu.tscn" id="4_paeu4"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vousd")
script = ExtResource("2_djtp5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ee0pf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 36

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 6
theme_override_font_sizes/font_size = 32
text = "TINY ROADS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 18
alignment = 1

[node name="StoryModeButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Нова гра"

[node name="ArcadeButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Аркада"

[node name="ParametrsButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Налаштування"

[node name="ExitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Вихід"

[node name="SettingsMenu" parent="." instance=ExtResource("4_paeu4")]
visible = false
layout_mode = 1

[node name="TempMessageMenu" parent="." instance=ExtResource("4_8eq45")]
visible = false
layout_mode = 1

[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/StoryModeButton" to="." method="_on_story_mode_pressed"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/ArcadeButton" to="." method="_on_arcade_pressed"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/ParametrsButton" to="." method="_on_parametrs_pressed"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/ExitButton" to="." method="_on_exit_pressed"]
